# rusty-openai

./: Cargo.toml  LICENSE.md  README.md
.github/ISSUE_TEMPLATE/: suggestion.md  wrapper--bug-report.md
docs/: README.md  index.html
src/: error_handling.rs  lib.rs  openai.rs  request_client.rs  util.rs
src/openai_api/: assistants.rs  audio.rs  client.rs  completion.rs  embeddings.rs  fine_tuning.rs  images.rs  mod.rs  moderations.rs  projects.rs  threads.rs  vectors.rs
